@@ -45,6 +45,7 @@ import com.JJ.controller.invoicemanagement.vo.InvoiceVO;
 import com.JJ.controller.paymentmanagement.PaymentManagementController;
 import com.JJ.controller.paymentmanagement.vo.PaymentDetailVO;
 import com.JJ.helper.GeneralUtils;
+import com.JJ.service.grantmanagement.GrantManagementService;
 import com.JJ.service.invoicemanagement.InvoiceManagementService;
 import com.JJ.service.paymentmanagement.PaymentManagementService;
 import com.JJ.validator.InvoiceSearchValidator;
@@ -58,6 +59,7 @@ public class InvoiceManagementController {
 	
 	private PaymentManagementController paymentManagementController;
 	private InvoiceManagementService invoiceManagementService;
+	private GrantManagementService grantManagementService;
 	private PaymentManagementService paymentManagementService;
 	private InvoiceSearchValidator invoiceSearchValidator;
 	List<InvoiceVO> invoiceList;
@@ -68,10 +70,12 @@ public class InvoiceManagementController {
 	@Autowired
 	public InvoiceManagementController(PaymentManagementController paymentManagementController,
 			InvoiceManagementService invoiceManagementService,
+			GrantManagementService grantManagementService,
 			PaymentManagementService paymentManagementService,
 			InvoiceSearchValidator invoiceSearchValidator) {
 		this.paymentManagementController = paymentManagementController;
 		this.invoiceManagementService = invoiceManagementService;
+		this.grantManagementService = grantManagementService;
 		this.paymentManagementService = paymentManagementService;
 		this.invoiceSearchValidator = invoiceSearchValidator;
 	}
@@ -98,19 +102,31 @@ public class InvoiceManagementController {
 	public @ResponseBody String getInventoryProductList() {
 		logger.debug("getting inventory history list");
 		invoiceList = invoiceManagementService.getAllInvoice();
+		List<InvoiceVO> grantList = grantManagementService.getAllGrant();
+		if(!grantList.isEmpty()){
+			invoiceList.addAll(grantList);
+		}
 		return GeneralUtils.convertListToJSONString(invoiceList);
 	}
 	
 	@RequestMapping(value = "/viewInvoice", method = RequestMethod.POST)
 	public String viewInvoice(@RequestParam("viewBtn") String id, Model model) {
 		logger.debug("id = " + id);
-		InvoiceVO invoiceVO = invoiceManagementService.getInvoiceById(new Integer(id));
+		InvoiceVO invoiceVO = null;
+		String[] splitId = id.split("-");
+		if(splitId[0] != null && splitId[1] != null){
+			if(splitId[1].toLowerCase().equals("invoice")) {
+				invoiceVO = invoiceManagementService.getInvoiceById(Integer.valueOf(splitId[0]));
+			}else if(splitId[1].toLowerCase().equals("grant")) {
+				invoiceVO = grantManagementService.getGrantById(Integer.valueOf(splitId[0]));
+			}
+		}
 		if (invoiceVO == null) {
 			model.addAttribute("css", "danger");
 			model.addAttribute("msg", "Invoice not found");
 		}else{
 			model.addAttribute("invoice", invoiceVO);
-			List<PaymentDetailVO> paymentList = paymentManagementService.getAllPaymentByRefTypeAndRefId("invoice", invoiceVO.getInvoiceId());
+			List<PaymentDetailVO> paymentList = paymentManagementService.getAllPaymentByRefTypeAndRefId(invoiceVO.getType(), Integer.valueOf(splitId[0]));
 			model.addAttribute("paymentList", paymentList);
 		}
 		return "viewInvoice";
